--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -1,21 +1,26 @@
-/* Overall Chat Page Container */
-.chat {
+.chat{
     min-height: 100vh;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-    display: grid;
+    background: linear-gradient(#596AFF,#383699);
+    display:grid;
     place-items: center;
 }
-
- /* Main Layout Container for Sidebars and Chat Box */
-.chat-container {
+.chat-container{
     width: 95%;
     height: 75vh;
     max-width: 1000px;
-    background-color: #ffffff;
+    background-color: aliceblue;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
 }
-
-
-
-/* Media Queries for Responsiveness */
+.loading{
+    font-size: 50px;
+    color: white;
+}
+@media (max-width:900px) {
+    .chat-container{
+        display: flex;
+    }
+    .loading{
+        font-size: 30px;
+    }
+}
